--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,7 +6,9 @@
 
 - link:
     ~/.gitconfig: gitconfig
-    ~/.zshrc: zshrc
+    ~/.zshrc:
+      path: zshrc
+      force: true
     # ~/.tmux.conf: tmux.conf
     # ~/.vim: vim
     # ~/.vimrc: vimrc
