--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,5 +18,5 @@
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
   - 
-    command: post_install
+    command: post_install.sh
     stderr: true
