--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,10 +7,10 @@
 - link:
     ~/.gitconfig:
       path: gitconfig
-      if: '[ ! -f ~/.gitconfig ]'
+#       if: '[ ! -f ~/.gitconfig ]'
     ~/.zshrc:
       path: zshrc
-      if: '[ ! -f ~/.zshrc ]'
+#       if: '[ ! -f ~/.zshrc ]'
     # ~/.tmux.conf: tmux.conf
     # ~/.vim: vim
     # ~/.vimrc: vimrc
