--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,10 +7,10 @@
 - link:
     ~/.gitconfig:
       path: gitconfig
-#       if: '[ ! -f ~/.gitconfig ]'
+      force: true
     ~/.zshrc:
       path: zshrc
-#       if: '[ ! -f ~/.zshrc ]'
+      force: true
     # ~/.tmux.conf: tmux.conf
     # ~/.vim: vim
     # ~/.vimrc: vimrc
