--- a/mise.toml
+++ b/mise.toml
@@ -3,4 +3,7 @@ node = "lts"
 python = "3.11"
 go = "latest"
 ruby = "latest"
+
+[settings]
+idiomatic_version_file_enable_tools = ["ruby"]
 # Add other tools as needed
